@@ -1,4 +1,4 @@
-.\"	$NetBSD: cksum.1,v 1.32 2005/09/11 23:11:48 wiz Exp $
+.\"	$NetBSD: cksum.1,v 1.33 2006/04/23 16:40:16 hubertf Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -32,7 +32,7 @@
 .\"
 .\"	@(#)cksum.1	8.2 (Berkeley) 4/28/95
 .\"
-.Dd August 24, 2005
+.Dd April 24, 2006
 .Dt CKSUM 1
 .Os
 .Sh NAME
@@ -49,14 +49,17 @@
 .Op Fl n
 .Oo
 .Fl a Ar algorithm |
+.Fl c Ar file |
 .Op Fl o Ar 1 | Ar 2
 .Oc
 .Op Ar
 .Nm sum
+.Op Fl c Ar file
 .Op Ar
 .Nm md2
 .Op Fl n
 .Oo
+.Fl c Ar file |
 .Fl p |
 .Fl t |
 .Fl x |
@@ -66,6 +69,7 @@
 .Nm md4
 .Op Fl n
 .Oo
+.Fl c Ar file |
 .Fl p |
 .Fl t |
 .Fl x |
@@ -75,6 +79,7 @@
 .Nm md5
 .Op Fl n
 .Oo
+.Fl c Ar file |
 .Fl p |
 .Fl t |
 .Fl x |
@@ -84,6 +89,7 @@
 .Nm sha1
 .Op Fl n
 .Oo
+.Fl c Ar file |
 .Fl p |
 .Fl t |
 .Fl x |
@@ -93,6 +99,7 @@
 .Nm rmd160
 .Op Fl n
 .Oo
+.Fl c Ar file |
 .Fl p |
 .Fl t |
 .Fl x |
@@ -202,6 +209,18 @@ and
 .Fl o Ar 2 ,
 respectively.
 The default is CRC.
+.It Fl c Ar file
+Verify a list of checksums generated by the
+.Nm
+program and stored in
+.Pa file
+against files on disk.
+E.g. first run
+.Dl Ic md5 *.tgz >MD5
+to generate a list of MD5 checksums in
+.Pa MD5,
+then use the following command to verify them:
+.Dl Ic md5 -c MD5
 .It Fl o
 Use historic algorithms instead of the (superior) default one.
 .Pp
@@ -314,6 +333,9 @@ and
 .Nm sum
 utilities exit 0 on success, and \*[Gt]0 if an error occurs.
 .Sh SEE ALSO
+.Xr openssl 1 ,
+.Xr mtree 8
+.Pp
 The default calculation is identical to that given in pseudo-code
 in the following
 .Tn ACM
@@ -362,6 +384,10 @@ and
 .Nm rmd160
 was added in
 .Nx 1.6 .
+The functionality to verify checksum stored in a file
+.Fl ( c )
+first appeared in
+.Nx 4.0 .
 .\" .Pp
 .\" The
 .\" .Nm sum
